--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -28,6 +28,7 @@ env:
   TF_VERSION: "1.10.0"
   PROJECT_NAME: ${{ vars.APP_NAME || 'vanillatstodo' }}
   ENVIRONMENT: ${{ github.event.inputs.environment }}
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -144,6 +145,109 @@ jobs:
             -var="project_name=${{ env.PROJECT_NAME }}" \
             -var="environment=${{ env.ENVIRONMENT }}" \
             -var="cluster_role_name=${{ env.EKS_CLUSTER_ROLE }}"
+
+      - name: Install EBS CSI Driver
+        id: ebs_csi
+        run: |
+          echo "🚀 Installing EBS CSI Driver for persistent volumes..."
+          
+          # Install kubectl
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+          
+          # Install Helm
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+          
+          # Update kubeconfig
+          aws eks update-kubeconfig \
+            --name ${{ env.CLUSTER_NAME }} \
+            --region ${{ env.AWS_REGION }}
+          
+          # Wait for cluster to be ready
+          echo "⏳ Waiting for EKS cluster to be ready..."
+          aws eks wait cluster-active --name ${{ env.CLUSTER_NAME }}
+          
+          # Wait for node groups to be ready
+          echo "⏳ Waiting for node groups to be ready..."
+          aws eks wait nodegroup-active --cluster-name ${{ env.CLUSTER_NAME }} --nodegroup-name workers || echo "Node group check completed"
+          
+          # Install EBS CSI Driver using Helm
+          echo "📦 Adding EKS Helm repository..."
+          helm repo add eks https://aws.github.io/eks-charts
+          helm repo update
+          
+          # Create the ebs-csi-driver service account
+          echo "🔧 Creating EBS CSI Driver service account..."
+          kubectl apply -f - <<EOF
+          apiVersion: v1
+          kind: ServiceAccount
+          metadata:
+            name: ebs-csi-controller-sa
+            namespace: kube-system
+            labels:
+              app.kubernetes.io/name: aws-ebs-csi-driver
+          EOF
+          
+          # Create the EBS CSI Driver IAM role
+          echo "🔧 Creating EBS CSI Driver IAM role..."
+          EBS_CSI_ROLE_NAME="${{ env.ENVIRONMENT }}-${{ env.PROJECT_NAME }}-ebs-csi-role"
+          
+          # Create trust policy for EBS CSI Driver
+          cat > ebs-csi-trust-policy.json <<EOF
+          {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Principal": {
+                  "Federated": "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:oidc-provider/oidc.eks.${{ env.AWS_REGION }}.amazonaws.com/id/$(aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} --query "cluster.identity.oidc.issuer" --output text | cut -d'/' -f5)"
+                },
+                "Action": "sts:AssumeRoleWithWebIdentity",
+                "Condition": {
+                  "StringEquals": {
+                    "oidc.eks.${{ env.AWS_REGION }}.amazonaws.com/id/$(aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} --query "cluster.identity.oidc.issuer" --output text | cut -d'/' -f5):sub": "system:serviceaccount:kube-system:ebs-csi-controller-sa",
+                    "oidc.eks.${{ env.AWS_REGION }}.amazonaws.com/id/$(aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} --query "cluster.identity.oidc.issuer" --output text | cut -d'/' -f5):aud": "sts.amazonaws.com"
+                  }
+                }
+              }
+            ]
+          }
+          EOF
+          
+          # Create the IAM role
+          aws iam create-role \
+            --role-name $EBS_CSI_ROLE_NAME \
+            --assume-role-policy-document file://ebs-csi-trust-policy.json || echo "Role may already exist"
+          
+          # Attach the EBS CSI Driver policy
+          aws iam attach-role-policy \
+            --role-name $EBS_CSI_ROLE_NAME \
+            --policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy || echo "Policy may already be attached"
+          
+          # Get the role ARN
+          EBS_CSI_ROLE_ARN=$(aws iam get-role --role-name $EBS_CSI_ROLE_NAME --query "Role.Arn" --output text)
+          echo "EBS_CSI_ROLE_ARN=$EBS_CSI_ROLE_ARN" >> $GITHUB_ENV
+          
+          # Annotate the service account with the role ARN
+          kubectl annotate serviceaccount ebs-csi-controller-sa \
+            -n kube-system \
+            eks.amazonaws.com/role-arn=$EBS_CSI_ROLE_ARN
+          
+          # Install EBS CSI Driver using Helm
+          echo "📦 Installing EBS CSI Driver..."
+          helm upgrade --install aws-ebs-csi-driver eks/aws-ebs-csi-driver \
+            --namespace kube-system \
+            --set controller.serviceAccount.create=false \
+            --set controller.serviceAccount.name=ebs-csi-controller-sa \
+            --wait --timeout=300s
+          
+          # Verify installation
+          echo "🔍 Verifying EBS CSI Driver installation..."
+          kubectl get pods -n kube-system -l app=ebs-csi-controller
+          kubectl get csidriver ebs.csi.aws.com
+          
+          echo "✅ EBS CSI Driver installed successfully!"
 
       - name: Deploy IAM Resources (GitHub Actions OIDC)
         id: iam
