--- a/.github/workflows/destroy_iac_aws.yml
+++ b/.github/workflows/destroy_iac_aws.yml
@@ -8,7 +8,7 @@ name: Destroy TFIaC on AWS
         required: true
         type: string
       environment:
-        description: "Environment to destroy (staging/production)"
+        description: "Environment to destroy (staging/production/experimental)"
         required: true
         type: choice
         options:
