--- a/.github/workflows/destroy_iac_aws.yml
+++ b/.github/workflows/destroy_iac_aws.yml
@@ -66,40 +66,11 @@ jobs:
       with:
         terraform_version: ${{ env.TF_VERSION }}
 
-    - name: Get IAM Role ARN (before destroying IAM resources)
+    - name: Use Manual IAM Role ARN
       id: iam_role_arn
       run: |
-        cd devops/terraform/04_iam
-        terraform init -reconfigure \
-          -backend-config="bucket=${{ env.BUCKET_NAME }}" \
-          -backend-config="key=${{ env.ENVIRONMENT }}/iam/terraform.tfstate" \
-          -backend-config="region=${{ env.AWS_REGION }}" \
-          -backend-config="encrypt=true"
-
-        # Check if IAM resources exist before trying to get ARN
-        if terraform output -raw github_actions_role_arn 2>/dev/null; then
-          ROLE_ARN=$(terraform output -raw github_actions_role_arn)
-          echo "github_actions_role_arn=${ROLE_ARN}" >> $GITHUB_OUTPUT
-          echo "✅ Found IAM role ARN: ${ROLE_ARN}"
-        else
-          echo "⚠️ IAM resources not found or already destroyed"
-          echo "github_actions_role_arn=" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Switch to OIDC Authentication (if IAM role exists)
-      if: steps.iam_role_arn.outputs.github_actions_role_arn != ''
-      run: |
-        echo "🔄 Switching from access keys to OIDC authentication..."
-        echo "Role ARN: ${{ steps.iam_role_arn.outputs.github_actions_role_arn }}"
-
-    - name: Configure AWS credentials (OIDC)
-      if: steps.iam_role_arn.outputs.github_actions_role_arn != ''
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-to-assume: ${{ steps.iam_role_arn.outputs.github_actions_role_arn }}
-        role-session-name: GitHubActions-Destroy-PostIAM
-        aws-region: ${{ env.AWS_REGION }}
-        audience: sts.amazonaws.com
+        echo "github_actions_role_arn=${{ secrets.AWS_ROLE_ARN }}" >> $GITHUB_OUTPUT
+        echo "✅ Using Manual GitHub Actions Role ARN: ${{ secrets.AWS_ROLE_ARN }}"
 
     - name: Destroy State Resources
       id: state
@@ -1154,30 +1125,12 @@ jobs:
           fi
         }
 
-    - name: Destroy IAM Resources (OIDC cleanup)
+    - name: Skip IAM Resources Destruction (Manual OIDC Role)
       id: iam_cleanup
       run: |
-        echo "🗑️ Destroying IAM resources (OIDC setup)..."
-        cd devops/terraform/04_iam
-        terraform init -reconfigure \
-          -backend-config="bucket=${{ env.BUCKET_NAME }}" \
-          -backend-config="key=${{ env.ENVIRONMENT }}/iam/terraform.tfstate" \
-          -backend-config="region=${{ env.AWS_REGION }}" \
-          -backend-config="encrypt=true"
-
-        # Check if IAM resources still exist
-        if terraform output -raw github_actions_role_arn 2>/dev/null; then
-          echo "✅ IAM resources found, proceeding with destruction..."
-          terraform destroy -auto-approve \
-            -var="aws_region=${{ env.AWS_REGION }}" \
-            -var="project_name=${{ env.PROJECT_NAME }}" \
-            -var="environment=${{ env.ENVIRONMENT }}" \
-            -var="github_owner=hftamayo" \
-            -var="github_repo=vanillatstodo"
-          echo "✅ IAM resources destroyed successfully"
-        else
-          echo "ℹ️ IAM resources not found or already destroyed"
-        fi
+        echo "ℹ️ Skipping IAM destruction - using manually created OIDC role"
+        echo "⚠️ Manual IAM role and OIDC provider must be deleted manually if needed"
+        echo "Role ARN: ${{ secrets.AWS_ROLE_ARN }}"
 
     - name: Clean Up S3 Resources
       id: s3_cleanup
