--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -302,17 +302,73 @@ jobs:
           -n kube-system \
           eks.amazonaws.com/role-arn=$EBS_CSI_ROLE_ARN
 
-        # Install EBS CSI Driver using Helm
-        echo "📦 Installing EBS CSI Driver..."
-        helm upgrade --install aws-ebs-csi-driver eks/aws-ebs-csi-driver \
-          --namespace kube-system \
-          --set controller.serviceAccount.create=false \
-          --set controller.serviceAccount.name=ebs-csi-controller-sa \
-          --wait --timeout=300s
+        # Prefer EKS managed add-on for EBS CSI Driver
+        echo "📦 Installing EBS CSI Driver via EKS managed add-on..."
+        set +e
+        aws eks describe-addon \
+          --cluster-name ${{ env.CLUSTER_NAME }} \
+          --addon-name aws-ebs-csi-driver \
+          --region ${{ env.AWS_REGION }} >/dev/null 2>&1
+        ADDON_EXISTS=$?
+        set -e
+        if [ $ADDON_EXISTS -eq 0 ]; then
+          echo "🔄 Updating existing EBS CSI Driver add-on..."
+          aws eks update-addon \
+            --cluster-name ${{ env.CLUSTER_NAME }} \
+            --addon-name aws-ebs-csi-driver \
+            --resolve-conflicts OVERWRITE \
+            --region ${{ env.AWS_REGION }} \
+            --service-account-role-arn "$EBS_CSI_ROLE_ARN" || true
+        else
+          echo "🆕 Creating EBS CSI Driver add-on..."
+          aws eks create-addon \
+            --cluster-name ${{ env.CLUSTER_NAME }} \
+            --addon-name aws-ebs-csi-driver \
+            --resolve-conflicts OVERWRITE \
+            --region ${{ env.AWS_REGION }} \
+            --service-account-role-arn "$EBS_CSI_ROLE_ARN"
+        fi
+
+        # Wait for add-on to become ACTIVE
+        echo "⏳ Waiting for EBS CSI Driver add-on to become ACTIVE..."
+        for i in {1..18}; do
+          STATUS=$(aws eks describe-addon \
+            --cluster-name ${{ env.CLUSTER_NAME }} \
+            --addon-name aws-ebs-csi-driver \
+            --query 'addon.status' \
+            --output text \
+            --region ${{ env.AWS_REGION }} 2>/dev/null || echo "UNKNOWN")
+          echo "Add-on status: $STATUS"
+          if [ "$STATUS" = "ACTIVE" ]; then
+            break
+          fi
+          sleep 10
+        done
+        FINAL_STATUS=$(aws eks describe-addon \
+          --cluster-name ${{ env.CLUSTER_NAME }} \
+          --addon-name aws-ebs-csi-driver \
+          --query 'addon.status' \
+          --output text \
+          --region ${{ env.AWS_REGION }} 2>/dev/null || echo "UNKNOWN")
+        if [ "$FINAL_STATUS" != "ACTIVE" ]; then
+          echo "⚠️ Add-on did not reach ACTIVE (status=$FINAL_STATUS). Falling back to Helm install..."
+          helm repo add eks https://aws.github.io/eks-charts || true
+          helm repo update || true
+          echo "🔎 Available eks charts:"
+          helm search repo eks | sed -n '1,120p' || true
+          echo "📦 Installing EBS CSI Driver with Helm fallback..."
+          helm upgrade --install aws-ebs-csi-driver eks/aws-ebs-csi-driver \
+            --namespace kube-system \
+            --create-namespace \
+            --set controller.serviceAccount.create=false \
+            --set controller.serviceAccount.name=ebs-csi-controller-sa \
+            --wait --timeout=300s
+        fi
 
         # Verify installation
         echo "🔍 Verifying EBS CSI Driver installation..."
-        kubectl get pods -n kube-system -l app=ebs-csi-controller
+        kubectl get pods -n kube-system -l app=ebs-csi-controller || true
+        kubectl get daemonset -n kube-system | grep -i ebs || true
         kubectl get csidriver ebs.csi.aws.com
 
         echo "✅ EBS CSI Driver installed successfully!"
