--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -329,9 +329,9 @@ jobs:
             --service-account-role-arn "$EBS_CSI_ROLE_ARN"
         fi
 
-        # Wait for add-on to become ACTIVE (extend to ~5 minutes)
+        # Wait for add-on to become ACTIVE (extend to ~10 minutes)
         echo "⏳ Waiting for EBS CSI Driver add-on to become ACTIVE..."
-        for i in {1..30}; do
+        for i in {1..60}; do
           STATUS=$(aws eks describe-addon \
             --cluster-name ${{ env.CLUSTER_NAME }} \
             --addon-name aws-ebs-csi-driver \
@@ -351,19 +351,15 @@ jobs:
           --output text \
           --region ${{ env.AWS_REGION }} 2>/dev/null || echo "UNKNOWN")
         if [ "$FINAL_STATUS" != "ACTIVE" ]; then
-          echo "⚠️ Add-on did not reach ACTIVE (status=$FINAL_STATUS). Falling back to Helm install..."
-          # Use the official aws-ebs-csi-driver chart repository
-          helm repo add aws-ebs-csi-driver https://kubernetes-sigs.github.io/aws-ebs-csi-driver || true
-          helm repo update || true
-          echo "🔎 Available aws-ebs-csi-driver charts:"
-          helm search repo aws-ebs-csi-driver | sed -n '1,120p' || true
-          echo "📦 Installing EBS CSI Driver with Helm fallback..."
-          helm upgrade --install aws-ebs-csi-driver aws-ebs-csi-driver/aws-ebs-csi-driver \
-            --namespace kube-system \
-            --create-namespace \
-            --set controller.serviceAccount.create=false \
-            --set controller.serviceAccount.name=ebs-csi-controller-sa \
-            --wait --timeout=300s
+          echo "❌ EBS CSI Driver add-on did not reach ACTIVE (status=$FINAL_STATUS)."
+          echo "🔎 Add-on health details:"
+          aws eks describe-addon \
+            --cluster-name ${{ env.CLUSTER_NAME }} \
+            --addon-name aws-ebs-csi-driver \
+            --query 'addon.health' \
+            --output json \
+            --region ${{ env.AWS_REGION }} || true
+          exit 1
         fi
 
         # Verify installation
