dropping the csi driver creation using imperative

--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -157,193 +157,7 @@ jobs:
           -var="cluster_role_name=${{ env.EKS_CLUSTER_ROLE }}" \
           -var="gha_actions_role_arn=${{ secrets.AWS_ROLE_ARN }}"
 
-    - name: Install EBS CSI Driver
-      id: ebs_csi
-      run: |
-        echo "🚀 Installing EBS CSI Driver for persistent volumes..."
-
-        # Install kubectl
-        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x kubectl
-        sudo mv kubectl /usr/local/bin/
-
-        # Install Helm
-        curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
-
-        # Update kubeconfig and force using the pipeline's IAM role
-        echo "🔧 Configuring kubectl for EKS access..."
-
-        # Get the EKS cluster's service role for debugging
-        CLUSTER_ROLE_ARN=$(aws eks describe-cluster \
-          --name ${{ env.CLUSTER_NAME }} \
-          --query "cluster.roleArn" \
-          --output text)
-
-        echo "EKS cluster role: $CLUSTER_ROLE_ARN"
-
-        # Update kubeconfig using current credentials (already assumed via OIDC action)
-        aws eks update-kubeconfig \
-          --name ${{ env.CLUSTER_NAME }} \
-          --region ${{ env.AWS_REGION }}
-
-        # Quick diagnostics for auth/context
-        echo "🔎 AWS identity:" && aws sts get-caller-identity || true
-        echo "🔎 kubectl version (client):" && kubectl version --client=true --output=yaml || true
-        echo "🔎 Current kube context:" && kubectl config current-context || true
-        echo "🔎 kubeconfig users:" && kubectl config view -o jsonpath='{.users[*].name}' || true
-        echo "" # newline
-        echo "🔎 Attempting to fetch token..." && aws eks get-token --cluster-name ${{ env.CLUSTER_NAME }} --region ${{ env.AWS_REGION }} >/dev/null && echo "Token OK" || echo "Token fetch failed"
-
-        # Wait for cluster to be ready
-        echo "⏳ Waiting for EKS cluster to be ready..."
-        aws eks wait cluster-active --name ${{ env.CLUSTER_NAME }}
-
-        # Wait for node groups to be ready
-        echo "⏳ Waiting for node groups to be ready..."
-        aws eks wait nodegroup-active --cluster-name ${{ env.CLUSTER_NAME }} --nodegroup-name workers || echo "Node group check completed"
-
-        # Install EBS CSI Driver using Helm
-        echo "📦 Adding EKS Helm repository..."
-        helm repo add eks https://aws.github.io/eks-charts
-        helm repo update
-
-        # Wait briefly for EKS access entry/credentials to propagate
-        echo "⏳ Waiting for EKS access propagation..."
-        for i in {1..12}; do
-          if kubectl auth can-i get namespaces >/dev/null 2>&1; then
-            echo "✅ EKS access verified."
-            break
-          else
-            echo "...still waiting for RBAC/credential propagation ($i/12)" && sleep 10
-          fi
-        done
-        if ! kubectl auth can-i get namespaces >/dev/null 2>&1; then
-          echo "❌ EKS access not yet propagated after waiting. Aborting."
-          exit 1
-        fi
-
-        # Do not create the service account manually; the EKS add-on will manage it
-
-        # Create the EBS CSI Driver IAM role
-        echo "🔧 Creating EBS CSI Driver IAM role..."
-        EBS_CSI_ROLE_NAME="${{ env.ENVIRONMENT }}-${{ env.PROJECT_NAME }}-ebs-csi-role"
-
-        # Create trust policy for EBS CSI Driver using jq to avoid heredoc indentation issues
-        ISSUER_ID=$(aws eks describe-cluster \
-          --name ${{ env.CLUSTER_NAME }} \
-          --query "cluster.identity.oidc.issuer" \
-          --output text | cut -d'/' -f5)
-        jq -n \
-          --arg acct "${{ secrets.AWS_ACCOUNT_ID }}" \
-          --arg region "${{ env.AWS_REGION }}" \
-          --arg issuer "$ISSUER_ID" \
-          '{
-            Version: "2012-10-17",
-            Statement: [
-              {
-                Effect: "Allow",
-                Principal: {
-                  Federated: ("arn:aws:iam::" + $acct + ":oidc-provider/oidc.eks." + $region + ".amazonaws.com/id/" + $issuer)
-                },
-                Action: "sts:AssumeRoleWithWebIdentity",
-                Condition: {
-                  StringEquals: {
-                    (
-                      "oidc.eks." + $region + ".amazonaws.com/id/" + $issuer + ":sub"
-                    ): "system:serviceaccount:kube-system:ebs-csi-controller-sa",
-                    (
-                      "oidc.eks." + $region + ".amazonaws.com/id/" + $issuer + ":aud"
-                    ): "sts.amazonaws.com"
-                  }
-                }
-              }
-            ]
-          }' > ebs-csi-trust-policy.json
-
-        # Create the IAM role
-        aws iam create-role \
-          --role-name $EBS_CSI_ROLE_NAME \
-          --assume-role-policy-document file://ebs-csi-trust-policy.json || echo "Role may already exist"
-
-        # Attach the EBS CSI Driver policy
-        aws iam attach-role-policy \
-          --role-name $EBS_CSI_ROLE_NAME \
-          --policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy || echo "Policy may already be attached"
-
-        # Get the role ARN
-        EBS_CSI_ROLE_ARN=$(aws iam get-role --role-name $EBS_CSI_ROLE_NAME --query "Role.Arn" --output text)
-        echo "EBS_CSI_ROLE_ARN=$EBS_CSI_ROLE_ARN" >> $GITHUB_ENV
-        echo "🔎 Using IRSA role for add-on: $EBS_CSI_ROLE_ARN"
-
-        # Prefer EKS managed add-on for EBS CSI Driver
-        echo "📦 Installing EBS CSI Driver via EKS managed add-on..."
-        set +e
-        aws eks describe-addon \
-          --cluster-name ${{ env.CLUSTER_NAME }} \
-          --addon-name aws-ebs-csi-driver \
-          --region ${{ env.AWS_REGION }} >/dev/null 2>&1
-        ADDON_EXISTS=$?
-        set -e
-        if [ $ADDON_EXISTS -eq 0 ]; then
-          echo "🔄 Updating existing EBS CSI Driver add-on..."
-          aws eks update-addon \
-            --cluster-name ${{ env.CLUSTER_NAME }} \
-            --addon-name aws-ebs-csi-driver \
-            --resolve-conflicts OVERWRITE \
-            --region ${{ env.AWS_REGION }} \
-            --service-account-role-arn "$EBS_CSI_ROLE_ARN" || true
-        else
-          echo "🆕 Creating EBS CSI Driver add-on..."
-          aws eks create-addon \
-            --cluster-name ${{ env.CLUSTER_NAME }} \
-            --addon-name aws-ebs-csi-driver \
-            --resolve-conflicts OVERWRITE \
-            --region ${{ env.AWS_REGION }} \
-            --service-account-role-arn "$EBS_CSI_ROLE_ARN"
-        fi
-
-        # Wait for add-on to become ACTIVE (extend to ~10 minutes)
-        echo "⏳ Waiting for EBS CSI Driver add-on to become ACTIVE..."
-        for i in {1..60}; do
-          STATUS=$(aws eks describe-addon \
-            --cluster-name ${{ env.CLUSTER_NAME }} \
-            --addon-name aws-ebs-csi-driver \
-            --query 'addon.status' \
-            --output text \
-            --region ${{ env.AWS_REGION }} 2>/dev/null || echo "UNKNOWN")
-          echo "Add-on status: $STATUS"
-          if [ "$STATUS" = "ACTIVE" ]; then
-            break
-          fi
-          sleep 10
-        done
-        FINAL_STATUS=$(aws eks describe-addon \
-          --cluster-name ${{ env.CLUSTER_NAME }} \
-          --addon-name aws-ebs-csi-driver \
-          --query 'addon.status' \
-          --output text \
-          --region ${{ env.AWS_REGION }} 2>/dev/null || echo "UNKNOWN")
-        if [ "$FINAL_STATUS" != "ACTIVE" ]; then
-          echo "❌ EBS CSI Driver add-on did not reach ACTIVE (status=$FINAL_STATUS)."
-          echo "🔎 Add-on health details:"
-          aws eks describe-addon \
-            --cluster-name ${{ env.CLUSTER_NAME }} \
-            --addon-name aws-ebs-csi-driver \
-            --query 'addon.health' \
-            --output json \
-            --region ${{ env.AWS_REGION }} || true
-          echo "🔎 Recent add-on events:" || true
-          kubectl get events -n kube-system --sort-by=.lastTimestamp | tail -n 50 || true
-          echo "🔎 DaemonSets in kube-system:" && kubectl get ds -n kube-system -o wide || true
-          echo "🔎 Pods for ebs-csi-controller:" && kubectl get pods -n kube-system -l app=ebs-csi-controller -o wide || true
-          exit 1
-        fi
-
-        # Verify installation
-        echo "🔍 Verifying EBS CSI Driver installation..."
-        kubectl get pods -n kube-system -l app=ebs-csi-controller || true
-        kubectl get daemonset -n kube-system | grep -i ebs || true
-        kubectl get csidriver ebs.csi.aws.com
+    # CSI Driver installation is now fully managed by Terraform aws_eks_addon
 
         echo "✅ EBS CSI Driver installed successfully!"
 
