--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -149,6 +149,22 @@ jobs:
           -backend-config="key=${{ env.ENVIRONMENT }}/eks/terraform.tfstate" \
           -backend-config="region=${{ env.AWS_REGION }}" \
           -backend-config="encrypt=true"
+
+        # Import pre-existing IRSA role if it already exists to avoid EntityAlreadyExists
+        EBS_CSI_ROLE_NAME="${{ env.ENVIRONMENT }}-${{ env.PROJECT_NAME }}-ebs-csi-role"
+        if aws iam get-role --role-name "$EBS_CSI_ROLE_NAME" >/dev/null 2>&1; then
+          echo "🔎 Importing existing IAM role into state: $EBS_CSI_ROLE_NAME"
+          terraform import -input=false aws_iam_role.ebs_csi "$EBS_CSI_ROLE_NAME" || true
+        fi
+
+        # Import existing OIDC provider if present
+        OIDC_ISSUER=$(aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} --query "cluster.identity.oidc.issuer" --output text)
+        OIDC_HOST=${OIDC_ISSUER#https://}
+        OIDC_ARN="arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:oidc-provider/${OIDC_HOST}"
+        if aws iam get-open-id-connect-provider --open-id-connect-provider-arn "$OIDC_ARN" >/dev/null 2>&1; then
+          echo "🔎 Importing existing OIDC provider into state: $OIDC_ARN"
+          terraform import -input=false aws_iam_openid_connect_provider.eks "$OIDC_ARN" || true
+        fi
         terraform apply -auto-approve \
           -var="cluster_name=${{ env.CLUSTER_NAME }}" \
           -var="aws_region=${{ env.AWS_REGION }}" \
