--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -220,17 +220,25 @@ jobs:
           echo "...still waiting ($i/30)"; sleep 10
         done
 
-        # Create or update add-on with short timeout
+        # Resolve IRSA role ARN created by Terraform
+        EBS_CSI_ROLE_NAME="${{ env.ENVIRONMENT }}-${{ env.PROJECT_NAME }}-ebs-csi-role"
+        EBS_CSI_ROLE_ARN=$(aws iam get-role --role-name "$EBS_CSI_ROLE_NAME" --query 'Role.Arn' --output text 2>/dev/null || echo "")
+        if [ -z "$EBS_CSI_ROLE_ARN" ] || [ "$EBS_CSI_ROLE_ARN" = "None" ]; then
+          echo "❌ Could not resolve IRSA role ARN for $EBS_CSI_ROLE_NAME. Aborting add-on install."
+          exit 1
+        fi
+
+        # Create or update add-on with short timeout and explicit IRSA role
         set +e
         aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --region ${{ env.AWS_REGION }} >/dev/null 2>&1
         EXISTS=$?
         set -e
         if [ $EXISTS -eq 0 ]; then
           echo "🔄 Updating existing EBS CSI add-on..."
-          aws eks update-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --resolve-conflicts OVERWRITE --region ${{ env.AWS_REGION }} || true
+          aws eks update-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --resolve-conflicts OVERWRITE --region ${{ env.AWS_REGION }} --service-account-role-arn "$EBS_CSI_ROLE_ARN" || true
         else
           echo "🆕 Creating EBS CSI add-on..."
-          aws eks create-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --resolve-conflicts OVERWRITE --region ${{ env.AWS_REGION }} || true
+          aws eks create-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --resolve-conflicts OVERWRITE --region ${{ env.AWS_REGION }} --service-account-role-arn "$EBS_CSI_ROLE_ARN" || true
         fi
 
         echo "⏳ Waiting for add-on to be ACTIVE (10m max)..."
@@ -246,8 +254,16 @@ jobs:
         if [ "$FINAL" != "ACTIVE" ]; then
           echo "❌ EBS CSI add-on not ACTIVE (status=$FINAL). Diagnostics:"
           aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --query 'addon.health' --output json --region ${{ env.AWS_REGION }} || true
+          echo "🔎 ServiceAccountRoleArn:" && aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --query 'addon.serviceAccountRoleArn' --output text --region ${{ env.AWS_REGION }} || true
           kubectl -n kube-system get ds,pods -o wide | grep -Ei 'ebs|csi' || true
           kubectl -n kube-system get events --sort-by=.lastTimestamp | tail -n 100 || true
+          echo "🔎 Describing ebs-csi-controller deployment:" && kubectl -n kube-system describe deploy ebs-csi-controller || true
+          echo "🔎 Logs (ebs-plugin):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c ebs-plugin --tail=200 || true
+          echo "🔎 Logs (csi-attacher):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-attacher --tail=200 || true
+          echo "🔎 Logs (csi-provisioner):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-provisioner --tail=200 || true
+          echo "🔎 Logs (csi-resizer):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-resizer --tail=200 || true
+          echo "🔎 Logs (csi-snapshotter):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-snapshotter --tail=200 || true
+          echo "🔎 Logs (liveness-probe):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c liveness-probe --tail=200 || true
           exit 1
         fi
         echo "✅ EBS CSI add-on ACTIVE"
